--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
 Flask==3.0.3
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.2
-joblib==1.3.2
-matplotlib==3.7.5
-seaborn==0.12.2
+pandas>=2.0.3,<2.1.0
+numpy>=1.24.3,<1.25.0
+scikit-learn>=1.3.0,<1.4.0
+joblib>=1.3.0,<1.4.0
 gunicorn==21.2.0
-# Optional big data handling (install only if needed)
-# pyspark==3.5.1
