Fix gunicorn start command

--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,12 @@ services:
     name: fraud-detection-app
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
+    startCommand: python -m gunicorn app:app --bind 0.0.0.0:$PORT
     pythonVersion: "3.11.9"
     envVars:
       - key: FLASK_ENV
         value: production
       - key: PYTHONUNBUFFERED
         value: true
+      - key: PYTHON_VERSION
+        value: "3.11.9"
