--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: fraud-detection-app
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python -m gunicorn app:app --bind 0.0.0.0:$PORT
+    startCommand: gunicorn wsgi:app --bind 0.0.0.0:$PORT
     pythonVersion: "3.11.9"
     envVars:
       - key: FLASK_ENV
